NetBSD Problem Report #30069

From www@netbsd.org  Wed Apr 27 07:25:29 2005
Return-Path: <www@netbsd.org>
Received: by narn.netbsd.org (Postfix, from userid 31301)
	id 7472063B116; Wed, 27 Apr 2005 07:25:29 +0000 (UTC)
Message-Id: <20050427072529.7472063B116@narn.netbsd.org>
Date: Wed, 27 Apr 2005 07:25:29 +0000 (UTC)
From: christophe.plasschaert@wanadoo.fr
Reply-To: christophe.plasschaert@wanadoo.fr
To: gnats-bugs@netbsd.org
Subject: Little typo in /sys/net/if_spppsubr.c
X-Send-Pr-Version: www-1.0

>Number:         30069
>Category:       kern
>Synopsis:       Little typo in /sys/net/if_spppsubr.c
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Apr 27 07:26:01 +0000 2005
>Closed-Date:    Wed Apr 27 07:55:52 +0000 2005
>Last-Modified:  Wed Apr 27 07:55:52 +0000 2005
>Originator:     C. Plasschaert
>Release:        current
>Organization:
>Environment:
>Description:
Just a little typo activitiy instead of activity.


>How-To-Repeat:

>Fix:
--- if_spppsubr.c       Sat Apr  2 14:32:39 2005
+++ if_spppsubr.c_patched       Wed Apr 27 09:23:28 2005
@@ -4647,7 +4647,7 @@
                    /* idle timeout is enabled for this interface */
                    if ((now-sp->pp_last_activity) >= sp->pp_idle_timeout) {
                        if (ifp->if_flags & IFF_DEBUG)
-                           printf("%s: no activitiy for %lu seconds\n",
+                           printf("%s: no activity for %lu seconds\n",
                                sp->pp_if.if_xname,
                                (unsigned long)(now-sp->pp_last_activity));
                        lcp.Close(sp);

>Release-Note:

>Audit-Trail:
From: Martin Husemann <martin@netbsd.org>
To: gnats-bugs@netbsd.org
Cc: 
Subject: PR/30069 CVS commit: src/sys/net
Date: Wed, 27 Apr 2005 07:48:02 +0000 (UTC)

 Module Name:	src
 Committed By:	martin
 Date:		Wed Apr 27 07:48:02 UTC 2005

 Modified Files:
 	src/sys/net: if_spppsubr.c

 Log Message:
 Fix typo, from C. Plasschaert in PR kern/30069.


 To generate a diff of this commit:
 cvs rdiff -r1.83 -r1.84 src/sys/net/if_spppsubr.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: martin@netbsd.org
State-Changed-When: Wed, 27 Apr 2005 07:55:52 +0000
State-Changed-Why:
Fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.