Fix typo, from C. Plasschaert in PR kern/30069.